--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                     <img src="images/Image12.jpeg" alt="">
                     <figcaption>Image12</figcaption>
                 </figure>
+                
+                <figure class="card">
+                    <img src="images/Image13.jpeg" alt="">
+                    <figcaption>Image13</figcaption>
+                </figure>
 
             </div>
         </div>
